# CarND-Path-Planning-Project

./: .gitignore  ModelDocumentation.md  README.md  help.txt  test.ipynb
data/: highway_map.ods
src/: .gitignore  CMakeLists.txt  car.cpp  car.h  cart.h  circle.h  coords.cpp  coords.h  coordsConverterTest.cpp  coordstest.cpp  dimension.h  egoCar.h  frenet.h  funs.h  lane.h  main.cpp  main.h  mathfuns.h  parametricSpline.h  path.h  pathCreator.h  pathPlanner.h  pathPlannerTest.cpp  previousData.h  rectangle.h  referencePoint.h  spline.h  tests.cpp  vehicle.h  waypoints.cpp  waypoints.h
src/coords/: cart.h  coordSys.h  coordinateSystem.h  coordinateSystemCart.h  coords.h  coords2.h  coordsConverter.h  frenet.h  frenetCart.h  lineSegment.h  waypoints.h
src/tests/: coordsConverterTest.cpp  coordsConverterTest.h  egoCarTest.h  frenetTest.h  gtestHelper.h  parametricSplineTest.h  pathPlannerTest.cpp  pathPlannerTest.h  simulator.h  simulator2.h  vehicleDriver.h
